--- a/fotos.html
+++ b/fotos.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div>
-        <img src="Fotos/fotos.jpg" alt="Seccion fotos" width="1330px" height="400px">
+        <img src="Fotos/fotos.jpg" alt="Seccion fotos" width="100%" height="400px">
     </div>
 </header>
 <br>
