--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- bienvenida cuando el usuario entre a mi sitio -->
     <header>
         <div>
-            <img src="encabezado.JPG" alt="AcuarelaMuebles" width="1330px" height="400px">
+            <img src="encabezado.JPG" alt="AcuarelaMuebles" width="100%" height="400px">
         </div>
     </header>
  <br>
