--- a/tecnicas.html
+++ b/tecnicas.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div>
-        <img src="Tecnicas/tecnicas.jpg" alt="Seccion tecnicas" width="1330px" height="400px">
+        <img src="Tecnicas/tecnicas.jpg" alt="Seccion tecnicas" width="100%" height="400px">
     </div>
 </header>
 <br>
