--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <img src="Contacto/contacto.jpg" alt="Seccion contacto" width="1330px" height="400px">
+            <img src="Contacto/contacto.jpg" alt="Seccion contacto" width="100%" height="400px">
         </div>
     </header>
     <br>
