--- a/quienessomos.html
+++ b/quienessomos.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div>
-        <img src="Quienessomos/quienessomos.jpg" alt="Seccion ¿Quienes somos?" width="1330px" height="400px">
+        <img src="Quienessomos/quienessomos.jpg" alt="Seccion ¿Quienes somos?" width="100%" height="400px">
     </div>
 </header>
 <br>
