--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Acuarela Muebles</title>
 </head>
-<body>
+<body width="100%">
     <!-- bienvenida cuando el usuario entre a mi sitio -->
     <header>
         <div>
@@ -33,25 +33,29 @@
       <br>
     <section class="cuadro">
              <!-- Seccion quienes somos -->
-            <div >
-             <h1 class="animate__animated animate__backInLeft">¿Quiénes Somos?</h1>
+            <div class="container">
+                <div>
+                  <h1 class="animate__animated animate__backInLeft" >¿Quiénes Somos?</h1>
               <p> Acuarela Muebles arranco por el año 2017 siendo solo un hobby. Empezamos renovando muebles de familiares y amigos, aprendiendo y probando distintas tecnicas que veiamos en internet hasta que en 2020 con el cambio de situacion debido a la pandemia surgio la idea de convertir aquel hobby en una fuente de ingreso...
                  <br>
                  <br>
-                 <button id="button"><a href="quienessomos.html">Ver más</a></button>
+                 <button id="button" class="btn"><a href="quienessomos.html">Ver más</a></button>
               </p> 
                  <!--Lado derecho-->
-                 <img src="Quienessomos/foto3.jpg" width="400px" height="400px" style="position:relative; top: -5px; left:500px">
-            <div >
-             <!-- Seccion que hacemos-->
-            <div>
-             <h1 class="animate__animated animate__backInLeft">¿Que hacemos?</h1>
+                 <img src="Quienessomos/foto3.jpg" width="400px" height="400px" style="position:relative; top: -5px; left:500px" class="img-rounded">  
+                </div>
+
+            <!-- Seccion que hacemos-->  
+            <div class="container">
+                <div>
+                   <h1 class="animate__animated animate__backInLeft">¿Que hacemos?</h1>
              <p>En Acuarela Muebles nos encargamos de renovar todo tipo de muebles al gusto del cliente y a un muy buen costo, realizamos diferentes tecnicas como son el “Decoupage”, el “Decapado”, “Barnizado” y utilizamos distintos materiales para darle un toque unico...
                  <br>
                  <br>
-                 <button id="button"><a href="tecnicas.html">Ver más</a></button>
+                 <button id="button" class="btn"><a href="tecnicas.html">Ver más</a></button>
              </p>
                  <img src="tecnicasinicio.JPG" alt="Tecnicas" width="400px" height="400px" style="position:relative; top: -5px; left:500px"> 
+                </div>
             </div>
     </section>
     
