--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="js/bootstrap.js">
    <link rel="stylesheet" href="contacto.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +11,9 @@
     <title>Contacto</title>
 </head>
 <body>
-    <header>
+    <div class="container">
+    <div class="col-xs-12 col-sm-6 col-md-8">
+<header>
         <div>
             <img src="Contacto/contacto.jpg" alt="Seccion contacto" width="100%" height="400px">
         </div>
@@ -24,7 +29,7 @@
             <a href="contacto.html">Contacto</a>    
         </ul> 
     </nav>
-      <div style="position:absolute;right: 0;" class="box">
+      <div style="position:absolute;right: 0;" class="box box-linea">
            <fieldset style="width: fit-content;">
                 <legend>¡Dejanos tu consulta!</legend>  
                <form>
@@ -63,6 +68,8 @@
 <br>
 <br>
 <br>
+<br>
+<br>
 <footer>
     <!-- Pie de pagina-->
     <h2> ¡Seguinos! </h2>
@@ -77,5 +84,9 @@
     <br>
     <br>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> 
+    </div>
+    </div>  
+            
 </body>
 </html>
