--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="js/bootstrap.js">
 <link rel="stylesheet" href="inicio.css"/>
 <link
     rel="stylesheet"
@@ -44,21 +47,54 @@
                  <!--Lado derecho-->
                  <img src="Quienessomos/foto3.jpg" width="400px" height="400px" style="position:relative; top: -5px; left:500px" class="img-rounded">  
                 </div>
-
+                <br>
+                <br>
             <!-- Seccion que hacemos-->  
             <div class="container">
                 <div>
                    <h1 class="animate__animated animate__backInLeft">¿Que hacemos?</h1>
-             <p>En Acuarela Muebles nos encargamos de renovar todo tipo de muebles al gusto del cliente y a un muy buen costo, realizamos diferentes tecnicas como son el “Decoupage”, el “Decapado”, “Barnizado” y utilizamos distintos materiales para darle un toque unico...
+                  <p>En Acuarela Muebles nos encargamos de renovar todo tipo de muebles al gusto del cliente y a un muy buen costo, realizamos diferentes tecnicas como son el “Decoupage”, el “Decapado”, “Barnizado” y utilizamos distintos materiales para darle un toque unico...
                  <br>
                  <br>
                  <button id="button" class="btn"><a href="tecnicas.html">Ver más</a></button>
-             </p>
-                 <img src="tecnicasinicio.JPG" alt="Tecnicas" width="400px" height="400px" style="position:relative; top: -5px; left:500px"> 
+                   </p>
+                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="tecnicasinicio.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Tecnicas/acrilicos.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Tecnicas/barnizado.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Tecnicas/decapado.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Tecnicas/decoupage.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
                 </div>
             </div>
     </section>
-    
     <footer>
       <!-- Pie de pagina-->
       <h2> ¡Seguinos! </h2>
@@ -73,5 +109,6 @@
       <br>
       <br>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
