--- a/quienessomos.html
+++ b/quienessomos.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="js/bootstrap.js">
     <link rel="stylesheet" href="quienessomos.css"/>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +31,8 @@
     </ul> 
 </nav>
  <section class="box">
-        <h2>Sobre nosotros...</h2>
+        <h2 class="animate__animated animate__bounceInRight"> Sobre nosotros...</h2>
+        <br>
       <p>Acuarela Muebles arranco por el año 2017 siendo solo un hobby. Empezamos renovando muebles de familiares y amigos, aprendiendo y probando distintas tecnicas que veiamos en internet hasta que en 2020 con el cambio de situacion debido a la pandemia surgio la idea de convertir aquel hobby en una fuente de ingreso...
         <br> Muchas veces tenemos un mueble viejo, que esta en desuso u oculto en algun rincon, pero que por algun valor sentimental no nos queremos deshacer de el, por eso lo mas lindo de nuestro trabajo es  poder darle vida y devolverle el uso adaptandolo al estilo de la casa.
        <br> La idea de esta pagina es mostrarle a las personas las maravillosas cosas que se pueden hacer renovando muebles viejos.  
@@ -35,11 +42,10 @@
       <br>
       <br>
   <div>
-    <img src="Quienessomos/foto1.jpg" width= "300px" height="400px" class="border" style="position:relative; top: -20px; left:30px">
-     <img src="Quienessomos/foto2.jpg" width= "300px" height="400px" class="border" style="position:relative; top: -20px; left:130px">
-     <img src="Quienessomos/foto4.jpg" width= "300px" height="400px" class="border" style="position:relative; top: -20px; left:230px"> 
+    <img src="Quienessomos/foto1.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:30px">
+     <img src="Quienessomos/foto2.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:130px">
+     <img src="Quienessomos/foto4.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:230px"> 
    </div>
-      
 </section>
 <footer>
     <!-- Pie de pagina-->
@@ -55,5 +61,6 @@
     <br>
     <br>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
