--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,15 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="js/bootstrap.js">
    <link rel="stylesheet" href="contacto.css">
+   <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contacto</title>
 </head>
 <body>
-    <div class="container">
-    <div class="col-xs-12 col-sm-6 col-md-8">
 <header>
         <div>
             <img src="Contacto/contacto.jpg" alt="Seccion contacto" width="100%" height="400px">
@@ -48,9 +49,12 @@
                  <br>
                  <input type="reset" value="Borrar todo">
                  <input type="submit" value="Enviar">
+                 <br>
+                 <br>
                </form>
          </fieldset>  
      </div>
+     <br>
  <section class="box">
      <div>
          <h2>Asesoramiento</h2>
@@ -85,8 +89,5 @@
     <br>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> 
-    </div>
-    </div>  
-            
 </body>
 </html>
