--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Acuarela Muebles</title>
 </head>
-<body width="100%">
+<body>
     <!-- bienvenida cuando el usuario entre a mi sitio -->
     <header>
         <div>
@@ -32,9 +32,9 @@
             <a href="contacto.html">Contacto</a>    
         </ul> 
     </nav>
-      <br>
-      <br>
-    <section class="cuadro">
+    <br>
+    <br>
+    <section>
              <!-- Seccion quienes somos -->
             <div class="container">
                 <div>
