--- a/tecnicas.html
+++ b/tecnicas.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="es-ARG">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="js/bootstrap.js">
   <link rel="stylesheet" href="tecnicas.css"/>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,25 +32,25 @@
 </nav>
     <section class="box">
               <div>
-               <h2>Decapado</h2>
+               <h2 class="animate__animated animate__rubberBand">Decapado</h2>
               <p>Lo que logramos con el Decapado es simular el paso de los años en la pintura de un mueble u otro objeto. Al decapar un mueble se quita parte de la capa de pintura existente con una lija, para que se vea la capa anterior o directamente la madera.</p>
               <img src="Tecnicas/decapado.jpg" alt="Decapado" width="500px" height="400px"> 
               </div>
               <br>
               <div class="border">
-                <h2>Decoupage</h2>
+                <h2 class="animate__animated animate__rubberBand">Decoupage</h2>
                 <p>Con el Decoupage lo que hacemos es decorar con imágenes de papel o de telas recortadas y que son fijadas a la superficie que se quiera decorar con un barniz. El resultado final tiene que ser muy similar a como si lo hubiéramos hecho con pintura y un pincel.</p>
               <img src="Tecnicas/decoupage.jpg" alt="Decoupage" width="400px" height="500px">
               </div>
               <br>
               <div class="border">
-               <h2>Barnizado</h2>
+               <h2 class="animate__animated animate__rubberBand">Barnizado</h2>
               <p>Con esta tecnica lo que hacemos es embellecer y revivir la madera, el barniz le aporta resistencia fisica y quimica.</p> 
             <img src="Tecnicas/barnizado.jpg" alt="Barnizado" width="500px" height="300px">  
             </div>
             <br>
               <div class="border">
-                <h2>Decoracion</h2>
+                <h2 class="animate__animated animate__rubberBand">Decoracion</h2>
                 <p>Utilizamos distintos materiales con el fin de conseguir un diseño unico, algunos de los materiales que usamos son: acrilicos, sinteticos, pasta de modelar, etc..</p>
                 <img src="Tecnicas/acrilicos.jpg" alt="Acrilicos" width="400px" height="400px">
               </div> 
@@ -65,5 +71,6 @@
       <br>
       <br>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
