--- a/contacto.html
+++ b/contacto.html
@@ -82,9 +82,9 @@
     <br>
     <br>
     <div>
-       <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
-       <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
-       <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
+       <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Contacto/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
+       <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Contacto/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
+       <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Contacto/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
     </div>
     <br>
     <br>
