--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="js/bootstrap.js">
-<link rel="stylesheet" href="./css/inicio.css"/>
+<link rel="stylesheet" href="css/inicio.css"/>
 <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -20,7 +20,7 @@
     <!-- bienvenida cuando el usuario entre a mi sitio -->
     <header>
         <div>
-            <img src="encabezado.JPG" alt="AcuarelaMuebles" width="100%" height="400px">
+            <img src="Inicio/encabezado.JPG" alt="AcuarelaMuebles" width="100%" height="400px">
         </div>
     </header>
  <br>
@@ -103,9 +103,9 @@
       <br>
       <br>
       <div>
-         <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
-         <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
-         <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
+         <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Inicio/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
+         <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Inicio/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
+         <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Inicio/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
       </div>
       <br>
       <br>
