--- a/fotos.html
+++ b/fotos.html
@@ -91,9 +91,9 @@
   <br>
   <br>
   <div>
-     <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
-     <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
-     <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
+     <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Fotos/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
+     <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Fotos/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
+     <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Fotos/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
   </div>
   <br>
   <br>
