arregle html y css

--- a/fotos.html
+++ b/fotos.html
@@ -37,66 +37,142 @@
 <div class="animate__animated animate__bounce">
 <h1>Algunos trabajos realizados...</h1>
 </div>
-<section class="box">
+<section>
   <div>
-  <h2>Antes</h2>
-  <img src="Fotos/antes1.jpg" alt="Antes" width="400" height="400">
-  <h2>Después</h2>
-  <img src="Fotos/despues1.jpeg" alt="Después" width="400" height="400">
-  <p>En estos muebles lo que hicimos fue lijar muy bien la madera, luego la tecnica utilizada fue el Decapado en tonos rosa y tiza y por ultimo le agregamos unos detalles con acrilico.</p>
+    <table>
+      <thead>
+          <tr>
+            <th>Antes</th>
+          <th>Después</th>  
+          </tr>
+      </thead> 
+      <tbody>
+        <tr>
+          <td>
+          <img src="Fotos/antes1.jpg" alt="Antes" width="400" height="400">
+          </td>
+          <td>
+          <img src="Fotos/despues1.jpeg" alt="Después" width="400" height="400">
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-<br>
-<br>
-<div class="border">
-  <h2>Antes</h2>
-  <img src="Fotos/antes4.jpeg" alt="Antes" width="350" height="450">
-  <h2>Después</h2>
-  <img src="Fotos/despues4.jpeg" alt="Después" width="400" height="450">
-  <p>En este aparador lo que hicimos fue lijar la madera, le realizamos un Decapado en tono blanco crema, lo enceramos y por ultimo le dimos un toque especial agregandole manijas en tono verde agua.</p>
-</div>
-<br>
-<br>
-<div class="border">
-  <h2>Antes</h2>
-  <img src="Fotos/antes2.jpeg" alt="Antes" width="400" height="400">
-  <h2>Después</h2>
-  <img src="Fotos/despues2.jpeg" alt="Después" width="400" height="300">
-  <p>En esta mesita lijamos bien la madera, luego la tecnica utilizada fue el Decapado en tonos beige y tiza y por ultimo en la parte de arriba le aplicamos cetol.</p>
-</div>
-<br>
-<br>
-<div class="border">
-  <h2>Antes</h2>
-  <img src="Fotos/antes3.jpeg" alt="Antes" width="300" height="500">
-  <h2>Después</h2>
-  <img src="Fotos/despues3.jpeg" alt="Después" width="300" height="500">
-  <p>En esta silla lo primero que hicimos fue agregarle las maderas faltantes y lijar a fondo toda la silla, luego le hicimos un Decapado en tonos crudo y celeste cielo y por ultimo le añadimos un diseño en moldura con relieve.</p>
-</div>
-<br>
-<br>
-<div class="border">
-  <h2>Antes</h2>
-  <img src="Fotos/antes5.jpeg" alt="Antes" width="400" height="400">
-  <h2>Después</h2>
-  <img src="Fotos/despues5.jpeg" alt="Después" width="400" height="400">
-  <p>En este futon lo que hicimos fue lijarlo muy bien para luego hacerle un Decapado en tonos naranja y tiza, en el apoya brazos lo que le agregamos para darle el brillo fue cetol.</p>
-</div>
-<br>
-<br>
+  <br>
+    <div>
+      <p>En estos muebles lo que hicimos fue lijar muy bien la madera, luego la tecnica utilizada fue el Decapado en tonos rosa y tiza y por ultimo le agregamos unos detalles con acrilico.</p>
+    </div>
+    <br>
+    <div>
+      <table>
+        <thead>
+            <tr>
+              <th>Antes</th>
+            <th>Después</th>  
+            </tr>
+        </thead> 
+        <tbody>
+          <tr>
+            <td>
+            <img src="Fotos/antes4.jpeg" alt="Antes" width="350" height="450">
+            </td>
+            <td>
+              <img src="Fotos/despues4.jpeg" alt="Después" width="400" height="450">
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br>
+      <div>
+    <p>En este aparador lo que hicimos fue lijar la madera, le realizamos un Decapado en tono blanco crema, lo enceramos y por ultimo le dimos un toque especial agregandole manijas en tono verde agua.</p>
+      </div>
+      <br>
+      <div>
+        <table>
+          <thead>
+              <tr>
+                <th>Antes</th>
+              <th>Después</th>  
+              </tr>
+          </thead> 
+          <tbody>
+            <tr>
+              <td>
+                <img src="Fotos/antes2.jpeg" alt="Antes" width="400" height="400">
+              </td>
+              <td>
+                <img src="Fotos/despues2.jpeg" alt="Después" width="400" height="400">
+             </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+        <div>
+            <p>En esta mesita lijamos bien la madera, luego la tecnica utilizada fue el Decapado en tonos beige y tiza y por ultimo en la parte de arriba le aplicamos cetol.</p>
+        </div>
+        <br>
+        <div>
+          <table>
+            <thead>
+                <tr>
+                  <th>Antes</th>
+                <th>Después</th>  
+                </tr>
+            </thead> 
+            <tbody>
+              <tr>
+                <td>
+                  <img src="Fotos/antes3.jpeg" alt="Antes" width="300" height="500">
+                </td>
+                <td>
+                  <img src="Fotos/despues3.jpeg" alt="Después" width="300" height="500">
+               </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <br>
+          <div>
+              <p>En esta silla lo primero que hicimos fue agregarle las maderas faltantes y lijar a fondo toda la silla, luego le hicimos un Decapado en tonos crudo y celeste cielo y por ultimo le añadimos un diseño en moldura con relieve.</p>
+          </div>
+          <br>
+          <div>
+            <table>
+              <thead>
+                  <tr>
+                    <th>Antes</th>
+                  <th>Después</th>  
+                  </tr>
+              </thead> 
+              <tbody>
+                <tr>
+                  <td>
+                    <img src="Fotos/antes5.jpeg" alt="Antes" width="400" height="400">
+                  </td>
+                  <td>
+                    <img src="Fotos/despues5.jpeg" alt="Después" width="400" height="400">
+                 </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <br>
+            <div>
+                <p>En este futon lo que hicimos fue lijarlo muy bien para luego hacerle un Decapado en tonos naranja y tiza, en el apoya brazos lo que le agregamos para darle el brillo fue cetol.</p>
+            </div>
 </section>
-
 <footer>
+  <br>
   <!-- Pie de pagina-->
   <h2> ¡Seguinos! </h2>
-  <br>
   <br>
   <div>
      <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Fotos/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
      <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Fotos/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
      <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Fotos/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
   </div>
-  <br>
-  <br>
   <br>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
