--- a/index.html
+++ b/index.html
@@ -70,20 +70,19 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="tecnicasinicio.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                        <img src="Inicio/tecnicasinicio.jpg" class="d-block w-100" alt="Tecnicas" width="400px" height="500px">
                       </div>
                       <div class="carousel-item">
-                        <img src="Tecnicas/acrilicos.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                        <img src="Tecnicas/acrilicos.jpg" class="d-block w-100" alt="Tecnicas" width="400px" height="500px">
                       </div>
                       <div class="carousel-item">
-                        <img src="Tecnicas/barnizado.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                        <img src="Tecnicas/barnizado.jpg" class="d-block w-100" alt="Tecnicas" width="400px" height="500px">
                       </div>
                       <div class="carousel-item">
-                        <img src="Tecnicas/decapado.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
+                        <img src="Tecnicas/decapado.jpg" class="d-block w-100" alt="Tecnicas" width="400px" height="500px">
                       </div>
                       <div class="carousel-item">
-                        <img src="Tecnicas/decoupage.jpg" class="d-block w-100" alt="Tecnicas" width="500px" height="400px">
-                      </div>
+                        <img src="Tecnicas/decoupage.jpg" class="d-block w-100" alt="Tecnicas" width="400px" height="500px">
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -97,18 +96,18 @@
                 </div>
             </div>
     </section>
+    <br>
+    <br>
     <footer>
+      <br>
       <!-- Pie de pagina-->
       <h2> ¡Seguinos! </h2>
-      <br>
       <br>
       <div>
          <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Inicio/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
          <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Inicio/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
          <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Inicio/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
       </div>
-      <br>
-      <br>
       <br>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
