--- a/tecnicas.html
+++ b/tecnicas.html
@@ -60,17 +60,15 @@
               <br>   
     </section>
     <footer>
+      <br>
       <!-- Pie de pagina-->
       <h2> ¡Seguinos! </h2>
       <br>
-      <br>
       <div>
          <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Tecnicas/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
-         <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="instagram.PNG" alt="Tecnicas/Instagram" width="95px" height="50px"></a>
+         <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Tecnicas/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
          <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Tecnicas/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
       </div>
-      <br>
-      <br>
       <br>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
