--- a/contacto.html
+++ b/contacto.html
@@ -60,11 +60,10 @@
  <section class="box">
      <div>
          <h2>Asesoramiento</h2>
-         <p>Hace tu consulta o pedi tu presupuesto en nuestras redes sociales o por wsp!!</p>
+         <p>Hace tu consulta o pedi tu presupuesto en nuestras redes sociales o por wsp...</p>
          <h3>¡Llamanos!</h3>
              <ul>
-                 <li>2494222222</li>
-                 <li>2494333333</li>
+                 <li>+5492494361683</li>
              </ul> 
          <h4>Lunes a viernes de 9 hs a 18 hs</h4>
      </div>    
@@ -76,18 +75,18 @@
 <br>
 <br>
 <br>
+<br>
+<br>
 <footer>
+    <br>
     <!-- Pie de pagina-->
     <h2> ¡Seguinos! </h2>
-    <br>
     <br>
     <div>
        <a href="https://www.facebook.com/Acuarela-Muebles-104164711748587/"><img src="Contacto/facebook.PNG" alt="Facebook" width="75px" height="50px"></a>
        <a href="https://www.instagram.com/acuarelamuebles/?hl=es"><img src="Contacto/instagram.PNG" alt="Instagram" width="95px" height="50px"></a>
        <a href="https://api.whatsapp.com/send/?phone=542494361683&text&app_absent=0"><img src="Contacto/whatsapp.PNG" alt="Whatsapp" width="95px" height="50px"></a>
     </div>
-    <br>
-    <br>
     <br>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> 
