--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
     <title>Contacto | Acuarela Muebles</title>
 </head>
 <body>
+<div class="contenedor">
 <header>
         <div>
             <img src="Contacto/contacto.jpg" alt="Seccion contacto" width="100%" height="400px">
@@ -32,7 +33,18 @@
             <a href="contacto.html">Contacto</a>    
         </ul> 
     </nav>
-      <div style="position:absolute;right: 0;" class="box box-linea">
+    <section class="box">
+     <div>
+         <h2>Asesoramiento</h2>
+         <p>Hace tu consulta o pedi tu presupuesto en nuestras redes sociales o por wsp...</p>
+         <h3>¡Llamanos!</h3>
+             <ul>
+                 <li>+5492494361683</li>
+             </ul> 
+         <h4>Lunes a viernes de 9 hs a 18 hs</h4>
+     </div>    
+</section>
+      <div class="box2">
            <fieldset style="width: fit-content;">
                 <legend>¡Dejanos tu consulta!</legend>  
                <form>
@@ -56,23 +68,6 @@
                </form>
          </fieldset>  
      </div>
-     <br>
- <section class="box">
-     <div>
-         <h2>Asesoramiento</h2>
-         <p>Hace tu consulta o pedi tu presupuesto en nuestras redes sociales o por wsp...</p>
-         <h3>¡Llamanos!</h3>
-             <ul>
-                 <li>+5492494361683</li>
-             </ul> 
-         <h4>Lunes a viernes de 9 hs a 18 hs</h4>
-     </div>    
-</section>
-<br>
-<br>
-<br>
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -90,5 +85,6 @@
     <br>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> 
+</div>
 </body>
 </html>
