--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="Renovacion de muebles | Acuarela Muebles">
     <meta name="keywords" content="renovar, renovación, muebles, acrílicos, decoupage, decapado, barnizado">
     <title>Inicio | Acuarela Muebles</title>
 </head>
 <body>
+  <div class="contenedor">
     <!-- bienvenida cuando el usuario entre a mi sitio -->
     <header>
         <div>
@@ -39,28 +40,36 @@
     <section>
              <!-- Seccion quienes somos -->
             <div class="container">
-                <div>
-                  <h1 class="animate__animated animate__backInLeft" >¿Quiénes Somos?</h1>
+              <br>
+              <br>
+                <h1 class="animate__animated animate__backInLeft" >¿Quiénes Somos?</h1>
+                <div class="imagen">
+                   <img src="Quienessomos/foto3.jpg" style="max-width: 100%; width: 400px;height: 400px;"> 
+                  </div>
+                   <br>
               <p> Acuarela Muebles arranco por el año 2017 siendo solo un hobby. Empezamos renovando muebles de familiares y amigos, aprendiendo y probando distintas tecnicas que veiamos en internet hasta que en 2020 con el cambio de situacion debido a la pandemia surgio la idea de convertir aquel hobby en una fuente de ingreso...
-                 <br>
+                <br>
                  <br>
                  <button id="button" class="btn"><a href="quienessomos.html">Ver más</a></button>
-              </p> 
-                 <!--Lado derecho-->
-                 <img src="Quienessomos/foto3.jpg" width="400px" height="400px" style="position:relative; top: -5px; left:500px" class="img-rounded">  
-                </div>
+              </p>
+            </div>
+                <br>
+                <br>
+                <br>
+                <br>
                 <br>
                 <br>
             <!-- Seccion que hacemos-->  
             <div class="container">
                 <div>
                    <h1 class="animate__animated animate__backInLeft">¿Que hacemos?</h1>
+                   <br>
                   <p>En Acuarela Muebles nos encargamos de renovar todo tipo de muebles al gusto del cliente y a un muy buen costo, realizamos diferentes tecnicas como son el “Decoupage”, el “Decapado”, “Barnizado” y utilizamos distintos materiales para darle un toque unico...
                  <br>
                  <br>
                  <button id="button" class="btn"><a href="tecnicas.html">Ver más</a></button>
                    </p>
-                   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -111,5 +120,6 @@
       <br>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-</body>
+  </div>
+  </body>
 </html>
