--- a/quienessomos.html
+++ b/quienessomos.html
@@ -16,6 +16,7 @@
     <title>Nosotros | Acuarela Muebles</title>
 </head>
 <body>
+  <div class="contenedor">
   <header>
     <div>
         <img src="Quienessomos/quienessomos.jpg" alt="Seccion ¿Quienes somos?" width="100%" height="400px">
@@ -32,23 +33,24 @@
         <a href="contacto.html">Contacto</a>    
     </ul> 
 </nav>
- <section class="box">
-        <h1 class="animate__animated animate__bounceInRight"> Sobre nosotros...</h1>
+ <section>
+   <div class="box">
+      <h1 class="animate__animated animate__bounceInRight"> Sobre nosotros...</h1>
         <br>
       <p>Acuarela Muebles arranco por el año 2017 siendo solo un hobby. Empezamos renovando muebles de familiares y amigos, aprendiendo y probando distintas tecnicas que veiamos en internet hasta que en 2020 con el cambio de situacion debido a la pandemia surgio la idea de convertir aquel hobby en una fuente de ingreso...
         <br> Muchas veces tenemos un mueble viejo, que esta en desuso u oculto en algun rincon, pero que por algun valor sentimental no nos queremos deshacer de el, por eso lo mas lindo de nuestro trabajo es  poder darle vida y devolverle el uso adaptandolo al estilo de la casa.
        <br> La idea de esta pagina es mostrarle a las personas las maravillosas cosas que se pueden hacer renovando muebles viejos.  
         </p>
-      <br>
-      <br>
-      <br>
-      <br>
-  <div>
-    <img src="Quienessomos/foto1.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:30px">
-     <img src="Quienessomos/foto2.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:130px">
-     <img src="Quienessomos/foto4.jpg" width= "300px" height="400px" style="position:relative; top: -20px; left:230px"> 
+   </div> 
+  <div class="imagenes">
+    <img src="Quienessomos/foto1.jpg" width= "300px" height="400px" style="justify-content: left; margin: 20px;">
+     <img src="Quienessomos/foto2.jpg" width= "300px" height="400px" style="justify-content: center; margin: 20px;">
+     <img src="Quienessomos/foto4.jpg" width= "300px" height="400px" style="justify-content: right; margin: 20px;">
+     <br>
    </div>
 </section>
+<br>
+<br>
 <footer>
   <br>
     <!-- Pie de pagina-->
@@ -62,5 +64,6 @@
     <br>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
