--- a/fotos.html
+++ b/fotos.html
@@ -16,6 +16,7 @@
     <title>Fotos | Acuarela Muebles</title>
 </head>
 <body>
+  <div class="contenedor">
   <header>
     <div>
         <img src="Fotos/fotos.jpg" alt="Seccion fotos" width="100%" height="400px">
@@ -49,10 +50,10 @@
       <tbody>
         <tr>
           <td>
-          <img src="Fotos/antes1.jpg" alt="Antes" width="400" height="400">
+          <img src="Fotos/antes1.jpg" alt="Antes" width="400" height="400" style="max-width: 100%;">
           </td>
           <td>
-          <img src="Fotos/despues1.jpeg" alt="Después" width="400" height="400">
+          <img src="Fotos/despues1.jpeg" alt="Después" width="400" height="400" style="max-width: 100%;">
           </td>
         </tr>
       </tbody>
@@ -74,10 +75,10 @@
         <tbody>
           <tr>
             <td>
-            <img src="Fotos/antes4.jpeg" alt="Antes" width="350" height="450">
+            <img src="Fotos/antes4.jpeg" alt="Antes" width="350" height="450" style="max-width: 100%;">
             </td>
             <td>
-              <img src="Fotos/despues4.jpeg" alt="Después" width="400" height="450">
+              <img src="Fotos/despues4.jpeg" alt="Después" width="400" height="450" style="max-width: 100%;">
             </td>
           </tr>
         </tbody>
@@ -99,10 +100,10 @@
           <tbody>
             <tr>
               <td>
-                <img src="Fotos/antes2.jpeg" alt="Antes" width="400" height="400">
+                <img src="Fotos/antes2.jpeg" alt="Antes" width="400" height="400" style="max-width: 100%;">
               </td>
               <td>
-                <img src="Fotos/despues2.jpeg" alt="Después" width="400" height="400">
+                <img src="Fotos/despues2.jpeg" alt="Después" width="400" height="400" style="max-width: 100%;">
              </td>
             </tr>
           </tbody>
@@ -124,10 +125,10 @@
             <tbody>
               <tr>
                 <td>
-                  <img src="Fotos/antes3.jpeg" alt="Antes" width="300" height="500">
+                  <img src="Fotos/antes3.jpeg" alt="Antes" width="300" height="500" style="max-width: 100%;">
                 </td>
                 <td>
-                  <img src="Fotos/despues3.jpeg" alt="Después" width="300" height="500">
+                  <img src="Fotos/despues3.jpeg" alt="Después" width="300" height="500" style="max-width: 100%;">
                </td>
               </tr>
             </tbody>
@@ -149,10 +150,10 @@
               <tbody>
                 <tr>
                   <td>
-                    <img src="Fotos/antes5.jpeg" alt="Antes" width="400" height="400">
+                    <img src="Fotos/antes5.jpeg" alt="Antes" width="400" height="400" style="max-width: 100%;">
                   </td>
                   <td>
-                    <img src="Fotos/despues5.jpeg" alt="Después" width="400" height="400">
+                    <img src="Fotos/despues5.jpeg" alt="Después" width="400" height="400" style="max-width: 100%;">
                  </td>
                 </tr>
               </tbody>
@@ -176,5 +177,6 @@
   <br>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
