--- a/tecnicas.html
+++ b/tecnicas.html
@@ -16,6 +16,7 @@
     <title>Tecnicas | Acuarela Muebles</title>
 </head>
 <body>
+  <div class="contenedor">
   <header>
     <div>
         <img src="Tecnicas/tecnicas.jpg" alt="Seccion tecnicas" width="100%" height="400px">
@@ -36,25 +37,25 @@
               <div>
                <h2 class="animate__animated animate__rubberBand">Decapado</h2>
               <p>Lo que logramos con el Decapado es simular el paso de los años en la pintura de un mueble u otro objeto. Al decapar un mueble se quita parte de la capa de pintura existente con una lija, para que se vea la capa anterior o directamente la madera.</p>
-              <img src="Tecnicas/decapado.jpg" alt="Decapado" width="500px" height="400px"> 
+              <img src="Tecnicas/decapado.jpg" alt="Decapado" width="500px" height="400px" style="max-width: 100%;"> 
               </div>
               <br>
               <div class="border">
                 <h2 class="animate__animated animate__rubberBand">Decoupage</h2>
                 <p>Con el Decoupage lo que hacemos es decorar con imágenes de papel o de telas recortadas y que son fijadas a la superficie que se quiera decorar con un barniz. El resultado final tiene que ser muy similar a como si lo hubiéramos hecho con pintura y un pincel.</p>
-              <img src="Tecnicas/decoupage.jpg" alt="Decoupage" width="400px" height="500px">
+              <img src="Tecnicas/decoupage.jpg" alt="Decoupage" width="400px" height="500px" style="max-width: 100%;"">
               </div>
               <br>
               <div class="border">
                <h2 class="animate__animated animate__rubberBand">Barnizado</h2>
               <p>Con esta tecnica lo que hacemos es embellecer y revivir la madera, el barniz le aporta resistencia fisica y quimica.</p> 
-            <img src="Tecnicas/barnizado.jpg" alt="Barnizado" width="500px" height="300px">  
+            <img src="Tecnicas/barnizado.jpg" alt="Barnizado" width="500px" height="300px" style="max-width: 100%;"">  
             </div>
             <br>
               <div class="border">
                 <h2 class="animate__animated animate__rubberBand">Decoracion</h2>
                 <p>Utilizamos distintos materiales con el fin de conseguir un diseño unico, algunos de los materiales que usamos son: acrilicos, sinteticos, pasta de modelar, etc..</p>
-                <img src="Tecnicas/acrilicos.jpg" alt="Acrilicos" width="400px" height="400px">
+                <img src="Tecnicas/acrilicos.jpg" alt="Acrilicos" width="400px" height="400px" style="max-width: 100%;"">
               </div> 
               <br>
               <br>   
@@ -72,5 +73,6 @@
       <br>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
